18-08-2004 Qball <Qball@qballcow.nl>
	* src/tray-icon.c:	Fixed some xinerama issues.
	* src/strfsong.c:	Remove '_' from strings.
	* src/tray-icon.c:	Added advanced tooltip support.
	* src/player.c:		Added tooltip to song window. (removed again)

07-08-2004 Qball <Qball@qballcow.nl>
	* Fixed some shadows in preferences window

03-08-2004 Qball <Qball@qballcow.nl>
	* Cleanup the list_tooltip

02-08-2004 Qball <Qball@qballcow.nl>
	* Applied patches from Pav Lucistnik for compiling on gcc < 3
	* Added src/list_tooltip.c
	* Very very basic support for tooltips in playlist window.

13-07-2004 Qball <Qball@qballcow.nl>
	* glade/gmpc.glade:	Fix typo.

12-07-2004 Qball <Qball@qballcow.nl>
	* src/playlist2.c:	Fixed bug that moved playlist window when
	search from id3window.
	* po/fr.po:		Updated translation
	* src/callback.c:	check_for_errors now checks if there is an
	actual connection, also don't try to print something you just free'ed.
	* Makefile.am:		Pack some intool-* stuff.

11-07-2004 Qball < Qball@qballcow.nl>
	* src/player.c:	All buttons in the main window can now be themed. 

10-07-2004 Qball <Qball@qballcow.nl>
	* glade/open-location.glade: 	Added tooltips to window saying you can drop files directly from a browser on the window.
	* glade/add-browser.glade:	Added tooltip to search button.
	* glade/song-browser.glade:	context menu.
	* src/song-browser.glade: 	Added function to update directory.

09-07-2004 Qball <Qball@qballcow.nl>
	* hide/unhide now hides all windows (except preferences) and reshows them again.
	* Saving position and size of all windows (exept pref)
	* src/song-browser.c:	Fixed warning when disconnecting
	* src/tray-icon.c:	make sure that the tooltip is updated.
	* glade/gmpc.glade:	Added tooltips to all the buttons in the
	playlist.		
	* src/song-browser.c:	Enabled sorting on id3 browser, custom sort function.
	* src/playlist2.c:	Enabled search (ctrl-f) on right column.
	* src/song-browser.c:	Enabled search column on the right column.